<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HarrisHessianFreak</string>
    <string name="save_buffers_label">Save Buffers</string>
    <string name="self_destruct">EXPLOSION</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="run_indef">Run Indefinitely</string>
    <string name="log_perf">Log Performance</string>
    <string name="button_workgroup_test">Workgroup Test</string>
</resources>
