<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <CheckBox
        android:id="@+id/save_buffers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_buffers_label"
    />
    <CheckBox
        android:id="@+id/run_indef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_indef"
    />
    <CheckBox
        android:id="@+id/log_perf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_perf"
    />
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button 
            android:id="@+id/button_start"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_start"
            android:onClick="onClickStart" 
        />
        <Button 
            android:id="@+id/button_stop"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_stop"
            android:onClick="onClickStop" 
        />
        <Button
            android:id="@+id/workgroup_test"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_workgroup_test"
            android:onClick="onClickWorkgroupTest"
        />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:max="100"
        style="@android:style/Widget.ProgressBar.Horizontal"
    />
    <TextView
        android:id="@+id/info_v"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Hello World, HarrisHessianFreak"
    />
    <TextView
        android:id="@+id/monitoring_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Monitoring data"
    />
</LinearLayout>
